parser/sample_tests/ours/functions.txt

*** Error line 5.
  return (b[d] + d);
  ^^^^^^
*** syntax error

